# medical-qa-benchmark

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
