[project]
name = "medical-qa-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.15",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "peft>=0.16.0",
    "plotly>=6.2.0",
    "sentence-transformers>=5.0.0",
    "transformers>=4.53.1",
    "trl>=0.19.1",
    "wandb>=0.21.0",
]
